--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "1.4.1",
+    "react-native-picker-select": "^6.3.3",
     "react-native-search-filter": "^0.1.5",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "3.13.0"
