--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
     "axios": "0.19.0",
+    "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "1.4.1",
