--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "1.4.1",
     "react-native-modal": "^11.4.0",
     "react-native-picker-select": "^6.3.3",
