--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "1.4.1",
     "react-native-modal": "^11.4.0",
     "react-native-picker-select": "^6.3.3",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-native-search-filter": "^0.1.5",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "3.13.0"
